<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".HomeActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_movie_logs"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/blackSemiLight"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/filter"
                    android:src="@drawable/baseline_filter_list_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/filter"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/home_swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_item" />

                <TextView
                    android:id="@+id/tv_not_found"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/film_not_found"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/no_movie_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no_films"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/blackSemiLight"/>
</FrameLayout>